# CamS

./: .env.example  .gitignore  docker-compose.yaml
apps/client/: .gitignore  main.py  pyproject.toml  requirements.txt
apps/client/src/: connection.py  main.py  request.py  schemas.py
apps/server/: .gitignore  Dockerfile  cam.py  face_recognition.py  pyproject.toml  requirements.server.txt  requirements.txt
apps/server/src/: drawing.py  dtypes.py  main.py  schemas.py
apps/server/src/api/: deps.py  main.py
apps/server/src/api/routes/: healthcheck.py  websocket.py
apps/server/src/core/: config.py  constants.py  users.py  utils.py
apps/server/src/messaging/: publisher.py
apps/server/src/services/: users.py
apps/server/src/utils/: __init__.py  encoding.py  images.py  rootdir.py
