[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "fastapi[standard]>=0.128.0",
    "opencv-python-headless>=4.12.0.88",
    "paho-mqtt>=2.1.0",
    "scikit-learn>=1.8.0",
    "setuptools>=75.0.0",
]

[dependency-groups]
dev = ["ruff>=0.14.13"]

[tool.ruff]
exclude = [".git", ".ipynb_checkpoints", ".pytest_cache", ".venv"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
